--- a/eco del destino.html
+++ b/eco del destino.html
@@ -1,25 +1,25 @@
 <html>
     <head>
-        <title>Diario de Greg</title>
+        <title>El eco del destino</title>
         <style>
             h1{
                 color:white;
                 font-size:60;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             h2{
                 color:white;
                 font-size: 37;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             p{
                 color:white;
-                font-size:17;
-                font-family:Arial, Helvetica, sans-serif ;
+                font-size:25;
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             a{
                 color:white;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
 
             .derecha{
@@ -34,16 +34,19 @@
             }
         </style>
     </head>
-    <body bgcolor="#41D2D6">
+    <body bgcolor="#90E613">
         <div align="center">
             <br>
-            <h1><u>Diario de Greg</u></h1>
-            <h2><u>Un Pringao Total</u></h2>
+            <h1>El eco del destino </h1>
+            <h2><u></u></h2>
             <br>
-            <img src="charlie.jfif" height="350" width="225">
+            <img src="Foto 5.jpg" height="350" width="225">
             <br>
             <br>
-            <p class="texto">Greg Heffley tiene 12 años y su madre le compra un diario que abarcará un curso escolar: de septiembre a junio. Conoceremos a Greg a traves de las hilarantes y enternecedoras desventuras que narra e ilustra en su libreta. Estamos ante un retrato cómico de la vida, la voz y las costumbres de los niños preadolescentes. Este debut hará a todo el mundo troncharse de risa.</p>
+            <p class="texto">Es una novela escrita por Iria G. Parente y Selene M. Pascual, publicada el 11 de abril de 2024. La historia sigue a Nathan Tabiz, quien hereda el Amuleto del Tiempo, un objeto poderoso que nunca debe usar, ya que cada vez que se utiliza, el resto del mundo sufre. Nathan ha jurado no usarlo, pero se enfrenta a una difícildecisión cuando descubre que la persona de la que se ha enamorado morirá en tres días. La novela es la primera entrega de la serie Time Keeper y combina elementos de fantasía, romance y acción, explorando temas como el poder, el destino y el sacrificio.<br><br><br><br>Dúo de autoras españolas que escriben literatura juvenil de fantasía y ciencia ficción, como las sagas Marabilia y Secretos de la luna llena.
+                Se conocieron en un foro en 2006 y desde entonces han publicado más de veinte novelas juntas, muchas de ellas premiadas
+                
+                 </p>
         </div>
         <a class="derecha" href="libro.html">Volver</a>
     </body>
