--- a/el viñedo.html
+++ b/el viñedo.html
@@ -1,25 +1,25 @@
 <html>
     <head>
-        <title>Diario de Greg</title>
+        <title>El viñedo de la luna</title>
         <style>
             h1{
                 color:white;
                 font-size:60;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             h2{
                 color:white;
                 font-size: 37;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             p{
                 color:white;
-                font-size:17;
-                font-family:Arial, Helvetica, sans-serif ;
+                font-size:25;
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             a{
                 color:white;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
 
             .derecha{
@@ -34,16 +34,17 @@
             }
         </style>
     </head>
-    <body bgcolor="#41D2D6">
+    <body bgcolor="#90E613">
         <div align="center">
             <br>
-            <h1><u>Diario de Greg</u></h1>
-            <h2><u>Un Pringao Total</u></h2>
+            <h1>El viñedo de la luna</h1>
             <br>
-            <img src="greg.jpg" height="350" width="225">
+            <img src="Foto 1.jpg" height="350" width="225">
             <br>
             <br>
-            <p class="texto">Greg Heffley tiene 12 años y su madre le compra un diario que abarcará un curso escolar: de septiembre a junio. Conoceremos a Greg a traves de las hilarantes y enternecedoras desventuras que narra e ilustra en su libreta. Estamos ante un retrato cómico de la vida, la voz y las costumbres de los niños preadolescentes. Este debut hará a todo el mundo troncharse de risa.</p>
+            <p class="texto">Es una novela escrita por Carla Montero y publicada el 11 de enero de 2024. La trama se desarrolla en la Francia ocupada por los nazis durante la Segunda Guerra Mundial y sigue la vida de Aldara, una joven española que, tras escapar de la Guerra Civil, llega a Borgoña como la nueva esposa de Octave, miembro de una prestigiosa familia vinícola.La finca vinícola, propiedad del Marqués Auguste de Fonneuve, se convierte en el escenario de una lucha por mantener las tradiciones familiares y la humanidad en medio del conflicto bélico. Aldara enfrenta múltiples desafíos: la tensa relación con su suegro, la partida de su esposo al frente, y la ocupación nazi. A medida que la guerra avanza, Aldara se involucra en la Resistencia francesa y debe lidiar con la presencia de un teniente alemán y un piloto aliado herido, mientras lucha por proteger el viñedo y su familia.<br><br><br><br>Carla Montero es una escritora madrileña de novela histórica, debutó con Una dama en juego, ganadora del Premio Círculo de Lectores.
+                Sus obras, como La tabla esmeralda o El invierno en tu rostro, combinan intriga, historia y protagonistas femeninas fuertes 
+                </p>
         </div>
         <a class="derecha" href="libro.html">Volver</a>
     </body>
