--- a/cuerpo rey.html
+++ b/cuerpo rey.html
@@ -1,25 +1,25 @@
 <html>
     <head>
-        <title>Diario de Greg</title>
+        <title>A cuerpo rey</title>
         <style>
             h1{
                 color:white;
                 font-size:60;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             h2{
                 color:white;
                 font-size: 37;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             p{
                 color:white;
-                font-size:17;
-                font-family:Arial, Helvetica, sans-serif ;
+                font-size:25;
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             a{
                 color:white;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
 
             .derecha{
@@ -34,16 +34,19 @@
             }
         </style>
     </head>
-    <body bgcolor="#41D2D6">
+    <body bgcolor="#90E613">
         <div align="center">
             <br>
-            <h1><u>Diario de Greg</u></h1>
-            <h2><u>Un Pringao Total</u></h2>
+            <h1>A cuerpo rey</h1>
             <br>
-            <img src="geronimo.jpg" height="350" width="225">
+            <img src="Foto 2.jpg" height="350" width="225">
             <br>
             <br>
-            <p class="texto">Greg Heffley tiene 12 años y su madre le compra un diario que abarcará un curso escolar: de septiembre a junio. Conoceremos a Greg a traves de las hilarantes y enternecedoras desventuras que narra e ilustra en su libreta. Estamos ante un retrato cómico de la vida, la voz y las costumbres de los niños preadolescentes. Este debut hará a todo el mundo troncharse de risa.</p>
+            <p class="texto">Es una novela escrita por Walter Mosley y publicada el 7 de febrero de 2024. La historia sigue al detective privado Joe King Oliver, quien recibe un encargo complicado de Roger Ferris, un multimillonario amigo de su abuela. Ferris le pide que ayude a Alfred Xavier Quiller, un hombre acusado de varios delitos graves que podría no haber cometido. Quiller es un personaje despreciable pero extremadamente inteligente, conocido por sus opiniones racistas y su trabajo para el gobierno. A medida que Joe King Oliver se adentra en el caso, descubre que la verdad puede ser peligrosa, incluso para sus seres queridos. La novela explora temas de violencia, dinero y racismo en Estados Unidos, y destaca la tensión social y racial que se vive en el país<br><br><br><br>Walter Mosley es un autor estadounidense nacido en Los Ángeles, célebre por su serie de novelas protagonizadas por el detective Easy Rawlins.
+                Su obra aborda temas raciales y sociales con gran profundidad, y ha sido galardonado con premios como el Edgar y el Cartier Diamond Dagger
+                
+
+            </p>
         </div>
         <a class="derecha" href="libro.html">Volver</a>
     </body>
