--- a/el hijo olvidado.html
+++ b/el hijo olvidado.html
@@ -1,25 +1,25 @@
 <html>
     <head>
-        <title>Diario de Greg</title>
+        <title>El hijo olvidado</title>
         <style>
             h1{
                 color:white;
                 font-size:60;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             h2{
                 color:white;
                 font-size: 37;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
             }
             p{
                 color:white;
-                font-size:17;
-                font-family:Arial, Helvetica, sans-serif ;
+                font-size:25;
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif ;
             }
             a{
                 color:white;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
 
             .derecha{
@@ -34,16 +34,19 @@
             }
         </style>
     </head>
-    <body bgcolor="#41D2D6">
+    <body bgcolor="#90E613">
         <div align="center">
             <br>
-            <h1><u>Diario de Greg</u></h1>
-            <h2><u>Un Pringao Total</u></h2>
+            <h1>El hijo olvidado</h1>
             <br>
-            <img src="futbolisimos.jpg"height="350" width="225">
+            <img src="Foto 3.jpg"height="350" width="225">
             <br>
             <br>
-            <p class="texto">Greg Heffley tiene 12 años y su madre le compra un diario que abarcará un curso escolar: de septiembre a junio. Conoceremos a Greg a traves de las hilarantes y enternecedoras desventuras que narra e ilustra en su libreta. Estamos ante un retrato cómico de la vida, la voz y las costumbres de los niños preadolescentes. Este debut hará a todo el mundo troncharse de risa.</p>
+            <p class="texto">Es una novela escrita por Mikel Santiago y publicada el 25 de enero de 2024. La historia sigue a Aitor Orizaola, conocido como "Ori", un agente de la Ertzaintza que se encuentra en horas bajas. Mientras se recupera de la violenta resolución de su último caso y enfrenta un expediente disciplinario, recibe una mala noticia: su sobrino Denis, que años atrás fue casi un hijo para él, ha sido acusado de asesinato. A pesar de estar oficialmente de baja, Ori decide investigar el caso, sospechando que Denis ha sido víctima de una conspiración. La trama se desarrolla en la Bizkaia profunda, donde Ori debe desentrañar una serie de pistas que incluyen una falsa acusación, un misterioso suicidio y una poderosa familia con mucho que ocultar. La novela es un thriller lleno de acción, suspense e intriga, que mantiene al lector en vilo desde la primera página.<br><br><br><br>Mikel Santiago es un escritor vasco de thrillers y novela negra, autor de La última noche en Tremore Beach y la serie ambientada en Illumbe.
+                Vivió en Irlanda y los Países Bajos, y combina su faceta de escritor con la música y el desarrollo de software
+                
+
+            </p>
         </div>
         <a class="derecha" href="libro.html">Volver</a>
     </body>
