--- a/futbolisimos.html
+++ b/futbolisimos.html
@@ -1,25 +1,25 @@
 <html>
     <head>
-        <title>Diario de Greg</title>
+        <title>El misterio del jugador numero 13</title>
         <style>
             h1{
                 color:white;
                 font-size:60;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             h2{
                 color:white;
                 font-size: 37;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+                font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
             p{
                 color:white;
-                font-size:17;
-                font-family:Arial, Helvetica, sans-serif ;
+                font-size:25;
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
-            a{
+                a{
                 color:white;
-                font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+                font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
             }
 
             .derecha{
@@ -34,16 +34,19 @@
             }
         </style>
     </head>
-    <body bgcolor="#41D2D6">
+    <body bgcolor="#90E613">
         <div align="center">
             <br>
-            <h1><u>Diario de Greg</u></h1>
-            <h2><u>Un Pringao Total</u></h2>
+            <h1>El misterio del jugador numero 13</h1>
             <br>
-            <img src="alicia.jfif" height="350" width="225">
+            <img src="foto 6.jpg" height="350" width="225">
             <br>
             <br>
-            <p class="texto">Greg Heffley tiene 12 años y su madre le compra un diario que abarcará un curso escolar: de septiembre a junio. Conoceremos a Greg a traves de las hilarantes y enternecedoras desventuras que narra e ilustra en su libreta. Estamos ante un retrato cómico de la vida, la voz y las costumbres de los niños preadolescentes. Este debut hará a todo el mundo troncharse de risa.</p>
+            <p class="texto">La historia gira en torno a la llegada de Víctor, un estudiante ruso que prefiere ser llamado NÚMERO 13. Este nuevo compañero se une al equipo de fútbol de Los Futbolísimos, formado por Pablo, Camuñas, Reverte, Tomi, Ocho, Anita, Angustias y Helena. Víctor destaca por su increíble talento en el fútbol, pero también por el misterio que rodea su pasado en Rusia. A medida que la trama avanza, Los Futbolísimos se ven envueltos en una serie de enigmas y desafíos que deben resolver para ayudar a Víctor a desentrañar la verdad detrás de su llegada al colegio. La historia resalta valores como la amistad, la superación personal y la solidaridad, todo ello en el emocionante contexto del fútbol.<br><br><br><br>Roberto Santiago es un escritor, guionista y director madrileño, conocido por su exitosa serie infantil Los Futbolísimos, que mezcla fútbol y misterio.
+                Ha ganado premios como el Edebé y el Fernando Lara, y también ha trabajado en cine y teatro con gran reconocimiento
+                
+
+            </p>
         </div>
         <a class="derecha" href="libro.html">Volver</a>
     </body>
